src/test/deca/context/valid/inheritance/access_inherited_public_field.deca
// Description :
//    Accès à un champ public hérité.
//
// Resultats :
//    OK

class A {
    public int x;
}

class B extends A {
    int f() {
        return x;
    }
}

{
}

