src/test/deca/context/invalid/classes/assign_to_final_field.deca
// Description :
// test affectation à un champ final
//
// Resultats :
// Erreur contextuelle
// Ligne 7 : Affectation à un champ final interdite

class A {
    final int x;
    void f() {
        x = 10; // Doit être refusé
    }
}
